wowie, get something done

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -121,6 +121,87 @@
     -->
 
     <main aria-label="main content" id="home-page-main-content">
+        <h1 id="main-page-title">Home | Featured</h1>
+        <!-- Featured section:  "Pokémon" Elden Ring Mod -->
+        <div class="featured-grid-container">
+            <div class="featured-item1">
+                <div class="image-main-container">
+                    <!-- Image has zoom effect and alt text for accessibility -->
+                    <img src="images/pokemon-elden-ring-mod.webp"
+                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
+                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
+                        Chess Championship of 2016.
+                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
+                    </section>
+                </div>
+            </div>
+            <div class="featured-item2">
+                <div class="image-main-container">
+                    <!-- Image has zoom effect and alt text for accessibility -->
+                    <img src="images/karjakin-and-magnus.jpeg"
+                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
+                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
+                        Chess Championship of 2016.
+                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
+                    <section class="small-text-overlay">
+                        <header class="small-image-header">
+                            <h3>Karjakin and Carlsen</h3>
+                        </header>
+                        <p>Karjakin and Carlsen's rivalry dates back to 2016. Karjakin was the challenger in the
+                            World Chess Championship and was pitted against Carlsen, the reigning world
+                            champion since 2013.</p>
+                        <!-- Two animated left carets which grow and shrink to indicate an interactive element -->
+                        <div class="double-left-caret">
+                            <i class="fas fa-angle-double-left"></i>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="featured-item3">
+                <div class="image-main-container">
+                    <!-- Image has zoom effect and alt text for accessibility -->
+                    <img src="images/karjakin-and-magnus.jpeg"
+                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
+                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
+                        Chess Championship of 2016.
+                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
+                    <section class="small-text-overlay">
+                        <header class="small-image-header">
+                            <h3>Karjakin and Carlsen</h3>
+                        </header>
+                        <p>Karjakin and Carlsen's rivalry dates back to 2016. Karjakin was the challenger in the
+                            World Chess Championship and was pitted against Carlsen, the reigning world
+                            champion since 2013.</p>
+                        <!-- Two animated left carets which grow and shrink to indicate an interactive element -->
+                        <div class="double-left-caret">
+                            <i class="fas fa-angle-double-left"></i>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="featured-item4">
+                <div class="image-main-container">
+                    <!-- Image has zoom effect and alt text for accessibility -->
+                    <img src="images/karjakin-and-magnus.jpeg"
+                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
+                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
+                        Chess Championship of 2016.
+                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
+                    <section class="small-text-overlay">
+                        <header class="small-image-header">
+                            <h3>Karjakin and Carlsen</h3>
+                        </header>
+                        <p>Karjakin and Carlsen's rivalry dates back to 2016. Karjakin was the challenger in the
+                            World Chess Championship and was pitted against Carlsen, the reigning world
+                            champion since 2013.</p>
+                        <!-- Two animated left carets which grow and shrink to indicate an interactive element -->
+                        <div class="double-left-caret">
+                            <i class="fas fa-angle-double-left"></i>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
 
         <!-- Featured section: "The Queen's Gambit" on Netflix -->
 
