homepage featured section
need to do the css for mobile and tablet later

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -121,87 +121,108 @@
     -->
 
     <main aria-label="main content" id="home-page-main-content">
-        <h1 id="main-page-title">Home | Featured</h1>
-        <!-- Featured section:  "Pokémon" Elden Ring Mod -->
-        <div class="featured-grid-container">
-            <div class="featured-item1">
-                <div class="image-main-container">
-                    <!-- Image has zoom effect and alt text for accessibility -->
-                    <img src="images/pokemon-elden-ring-mod.webp"
-                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
-                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
-                        Chess Championship of 2016.
-                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
-                    </section>
+        <article class="news-posts">
+            <h1 id="main-page-title">Home | Featured</h1>
+            <div class="featured-grid-container">
+                <!-- Featured section:  "Pokémon" Elden Ring Mod -->
+                <div class="featured-item1">
+                    <div class="image-main-container">
+                        <!-- Image has zoom effect and alt text for accessibility -->
+                        <img src="images/shiny-hunting.webp"
+                            alt="Player character with Miraidon">
+                            <section class="column-card-description">
+                                <!-- Primary article headline-->
+                                <h3>Shiny Hunting Is About To Get Harder In Pokémon Scarlet And Violet</h3>
+                                <!-- Primary article meta data: author, date and time posted, and number of comments -->
+                                <section class="meta-data">
+                                    <h4>Kenneth Shepard <i class="fas fa-pen"></i></h4>
+                                    <p><i class="fas fa-calendar"></i> February 17, 2023 <i
+                                        class="fas fa-comments"></i> 37 | Guide
+                                    </p>
+                                </section>
+                                <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
+                                <p>Game Freak is rolling out another big update to Pokémon Scarlet and Violet at the end of the month, and while there’s some attention being given to the games’ 
+                                    notorious performance issues, the solution the studio has gone with will fundamentally change certain aspects of the open-world RPG. 
+                                    Specifically, the team is looking to lower the amount of Pokémon it puts on screen at a time, which means that fewer will spawn at a time. 
+                                    This has big implications for shiny hunting.
+                                </p>
+                            </section>
+                    </div>
+                </div>
+                <div class="featured-item2">
+                    <div class="image-main-container">
+                        <!-- Image has zoom effect and alt text for accessibility -->
+                        <img src="images/pokemon-elden-ring-mod.webp"
+                            alt="Player character facing Koraidon">
+                            <section class="column-card-description">
+                                <!-- Primary article headline-->
+                                <h3>Pokémon Fans Think This Elden Ring Mod Looks Better Than Scarlet And Violet</h3>
+                                <!-- Primary article meta data: author, date and time posted, and number of comments -->
+                                <section class="meta-data">
+                                    <h4>Sisi Jiang <i class="fas fa-pen"></i></h4>
+                                    <p><i class="fas fa-calendar"></i> January 23, 2023 <i
+                                        class="fas fa-comments"></i> 17 | Culture
+                                    </p>
+                                </section>
+                            </section>
+                    </div>
+                </div>
+                <div class="featured-item3">
+                    <div class="image-main-container">
+                        <!-- Image has zoom effect and alt text for accessibility -->
+                        <img src="images/discord.webp"
+                            alt="Player character facing Koraidon">
+                            <section class="column-card-description">
+                                <!-- Primary article headline-->
+                                <h3>Massive Pokémon Discord Owner Banned For Allegedly Sexually Preying On Minors</h3>
+                                <!-- Primary article meta data: author, date and time posted, and number of comments -->
+                                <section class="meta-data">
+                                    <h4>Ethan Gach <i class="fas fa-pen"></i></h4>
+                                    <p><i class="fas fa-calendar"></i> February 3, 2023 <i
+                                        class="fas fa-comments"></i> 16 | Report
+                                    </p>
+                                </section>
+                            </section>
+                    </div>
+                </div>
+                <div class="featured-item4">
+                    <div class="image-main-container">
+                        <!-- Image has zoom effect and alt text for accessibility -->
+                        <img src="images/leak.jpeg"
+                            alt="Player character facing Koraidon">
+                            <section class="column-card-description">
+                                <!-- Primary article headline-->
+                                <h3>Pokemon Scarlet and Violet Leak Reveals Unused Content</h3>
+                                <!-- Primary article meta data: author, date and time posted, and number of comments -->
+                                <section class="meta-data">
+                                    <h4>Tyler Fischer <i class="fas fa-pen"></i></h4>
+                                    <p><i class="fas fa-calendar"></i> February 18, 2023 <i
+                                        class="fas fa-comments"></i> 0 | Report
+                                    </p>
+                                </section>
+                            </section>
+                    </div>
+                </div>
+                <div class="featured-item5">
+                    <div class="image-main-container">
+                        <!-- Image has zoom effect and alt text for accessibility -->
+                        <img src="images/catch-a-million.png"
+                            alt="Player character facing Koraidon">
+                            <section class="column-card-description">
+                                <!-- Primary article headline-->
+                                <h3>St. Baldrick’s Foundation's Catch a Million marathon returns for 2023, asking streamers to catch 1 million Pokémon to support kids cancer research</h3>
+                                <!-- Primary article meta data: author, date and time posted, and number of comments -->
+                                <section class="meta-data">
+                                    <h4>Archaic <i class="fas fa-pen"></i></h4>
+                                    <p><i class="fas fa-calendar"></i> February 18, 2023 <i
+                                        class="fas fa-comments"></i> 0 | Culture
+                                    </p>
+                                </section>
+                            </section>
+                    </div>
                 </div>
             </div>
-            <div class="featured-item2">
-                <div class="image-main-container">
-                    <!-- Image has zoom effect and alt text for accessibility -->
-                    <img src="images/karjakin-and-magnus.jpeg"
-                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
-                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
-                        Chess Championship of 2016.
-                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
-                    <section class="small-text-overlay">
-                        <header class="small-image-header">
-                            <h3>Karjakin and Carlsen</h3>
-                        </header>
-                        <p>Karjakin and Carlsen's rivalry dates back to 2016. Karjakin was the challenger in the
-                            World Chess Championship and was pitted against Carlsen, the reigning world
-                            champion since 2013.</p>
-                        <!-- Two animated left carets which grow and shrink to indicate an interactive element -->
-                        <div class="double-left-caret">
-                            <i class="fas fa-angle-double-left"></i>
-                        </div>
-                    </section>
-                </div>
-            </div>
-            <div class="featured-item3">
-                <div class="image-main-container">
-                    <!-- Image has zoom effect and alt text for accessibility -->
-                    <img src="images/karjakin-and-magnus.jpeg"
-                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
-                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
-                        Chess Championship of 2016.
-                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
-                    <section class="small-text-overlay">
-                        <header class="small-image-header">
-                            <h3>Karjakin and Carlsen</h3>
-                        </header>
-                        <p>Karjakin and Carlsen's rivalry dates back to 2016. Karjakin was the challenger in the
-                            World Chess Championship and was pitted against Carlsen, the reigning world
-                            champion since 2013.</p>
-                        <!-- Two animated left carets which grow and shrink to indicate an interactive element -->
-                        <div class="double-left-caret">
-                            <i class="fas fa-angle-double-left"></i>
-                        </div>
-                    </section>
-                </div>
-            </div>
-            <div class="featured-item4">
-                <div class="image-main-container">
-                    <!-- Image has zoom effect and alt text for accessibility -->
-                    <img src="images/karjakin-and-magnus.jpeg"
-                        alt="Magnus attempts to give a fist bump to Karjakin, who responds with a high five.">
-                    <!-- Text overlay describing the historic rivalry between Karjakin and Carlsen which dates back to the World
-                        Chess Championship of 2016.
-                        This text becomes visible when a user hovers over the beige area behind the two left carets. -->
-                    <section class="small-text-overlay">
-                        <header class="small-image-header">
-                            <h3>Karjakin and Carlsen</h3>
-                        </header>
-                        <p>Karjakin and Carlsen's rivalry dates back to 2016. Karjakin was the challenger in the
-                            World Chess Championship and was pitted against Carlsen, the reigning world
-                            champion since 2013.</p>
-                        <!-- Two animated left carets which grow and shrink to indicate an interactive element -->
-                        <div class="double-left-caret">
-                            <i class="fas fa-angle-double-left"></i>
-                        </div>
-                    </section>
-                </div>
-            </div>
-        </div>
+        </article>
 
         <!-- Featured section: "The Queen's Gambit" on Netflix -->
 
@@ -209,7 +230,6 @@
             <header class="introduction">
                 <section class="intro-text">
                     <!-- Home page header and featured section header -->
-                    <h1 id="main-page-title">Home | Featured</h1>
                     <!-- Featured section subheader: introducing "The Queen's Gambit" show -->
                     <h2>The Queen's Gambit premieres on Netflix, becoming Netflix's top show in 63 countries</h2>
                     <!-- Description including a summary of "The Queen's Gambit" -->
