page 2 almost done
need to work on right half and as always, the damn footer

clean up needed too

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -272,7 +272,7 @@
                             </div>
                             <div class="text">
                                 <!-- Primary article headline-->
-                                <h3>Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl</h3>
+                                <h3>Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl in Pokémon Scarlet & Violet until February 20th</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Archaic <i class="fas fa-pen"></i></h4>
