--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -278,23 +278,104 @@
                     <h2>Breaking news</h2>
                     <div class="current-item10">
                         <h3>2023 Pokémon Oceania International Championships - VGC</h3>
-                        <img src="images/46px-Pokemon_International_Championship_allmode.png" align="left" />
-                        <p>Gavin Michaels took the title of OCIC 2023 Masters Champion! after beating rival Alberto Lara 2-0</p>
-                        <img src="images/46px-Pokemon_International_Championship_allmode.png" align="left" />
-                        <p>In another 2-0 sweep,Benjamin claims victory over Tin Tin to become the Oceania International Seniors Champion!</p>
-                        <img src="images/46px-Pokemon_International_Championship_allmode.png" align="left" />
-                        <p>Jiseok Lee's Garganacl will be distributed via code in the Oceania International Championships stream</p>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/46px-Pokemon_International_Championship_allmode.png"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Gavin Michaels took the title of OCIC 2023 Masters Champion! after beating rival Alberto Lara 2-0<p>
+                            </div>
+                        </div>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/46px-Pokemon_International_Championship_allmode.png"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>In another 2-0 sweep,Benjamin claims victory over Tin Tin to become the Oceania International Seniors Champion!</p>
+                            </div>
+                        </div>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/46px-Pokemon_International_Championship_allmode.png"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Jiseok Lee's Garganacl will be distributed via code in the Oceania International Championships stream</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="current-item11">
-                        <h3>2023 Pokémon Oceania International Championships - VGC</h3>
-                        <img src="images/46px-Pokemon_International_Championship_allmode.png" align="left" />
-                        <p>Gavin Michaels took the title of OCIC 2023 Masters Champion! after beating rival Alberto Lara 2-0</p>
-                        <img src="images/46px-Pokemon_International_Championship_allmode.png" align="left" />
-                        <p>In another 2-0 sweep,Benjamin claims victory over Tin Tin to become the Oceania International Seniors Champion!</p>
-                        <img src="images/46px-Pokemon_International_Championship_allmode.png" align="left" />
-                        <p>Jiseok Lee's Garganacl will be distributed via code in the Oceania International Championships stream</p>
+                        <h3>In Game Event</h3>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/tera-raid.png"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Tera Raid Battles for Garchomp and Sylveon is now live</p>
+                            </div>
+                        </div>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/tera-raid.png"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Enter the code「1STCHAMPSV」for Jiseok Lee's Garganacl</p>
+                            </div>
+                        </div>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/tera-raid.png"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Second Round of 7-Star Greninja Tera Raid has ended </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="current-item12">
+                        <h3>Community Event</h3>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/Logo.svg"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>February Fanart contest is closing soon<p>
+                            </div>
+                        </div>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/Logo.svg"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Join us participating in Catch a Million marathon<p>
+                            </div>
+                        </div>
+                        <div class="image-text-container">
+                            <div class = "image">
+                                <!-- Image has zoom effect and alt text for accessibility -->
+                                <img src="images/Logo.svg"
+                                alt="Garganacl">
+                            </div>
+                            <div class="text">
+                                <p>Registration for March community tournament will be open on 25th<p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="current-item13">
                         <a class="twitter-timeline" data-height="2000" href="https://twitter.com/playpokemon?ref_src=twsrc%5Etfw">Tweets by playpokemon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>        
                 </div>
