--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -24,7 +24,7 @@
     <!-- Link jQuery's CDN used for accessibility dropdown menu -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Inform user of current page within site structure: shown on web page's tab -->
-    <title>Paldea Times | Home</title>
+    <title>Paldea Times | Current News</title>
 </head>
 
 <!-- Body section contains the structure for all visible content
@@ -60,8 +60,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="currentnews.html">Current News</a></li>
-                    <li><a href="topplayers.html">Raid Guide</a></li>
-                    <li><a href="contactus.html">About Paldea</a></li>
+                    <li><a href="raidguide.html">Raid Guide</a></li>
+                    <li><a href="aboutpaldea.html">About Paldea</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
                 </ul>
             </nav>
@@ -122,7 +122,7 @@
     <main class="current-news" aria-lable="main content">
         <article class="news post">
             <h1 id="main-page-title">Current News | Daily</h1>
-           <div class="current-grid-container">
+            <div class="current-grid-container">
                 <div class="current-item1">
                     <div class="current-item3">
                         <!-- Indicate the date the web page was published on and the last time the web page was updated -->
