--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -60,8 +60,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="currentnews.html">Current News</a></li>
-                    <li><a href="topplayers.html">Raid Guide</a></li>
-                    <li><a href="contactus.html">About Paldea</a></li>
+                    <li><a href="raidguide.html">Raid Guide</a></li>
+                    <li><a href="aboutpaldea.html">About Paldea</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
                 </ul>
             </nav>
