raid guide title

--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -112,5 +112,8 @@
             </aside>
         </section>
     </header>
+    <main>
+        <h1 id="main-page-title-center">Raid Guide</h1>
+    </main>
 
 </body>
