--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -319,23 +319,8 @@
             <div class="raid-item">
                 <div class="image-main-container">
                     <h3  id="recommendation">Recommended Builds</h3>
-                    <!-- Image has zoom effect and alt text for accessibility -->
-                    <img src="images/map.webp" alt="in game map menu">
-                    <p>Seek out Tera Crystals in the overworld, marked by a "star-shaped" icon. They are circled in the screenshot.
-                    </p><br />
-                    <img src="images/tera-crystal.jpg" alt="green tera crystal">
-                    <p>These objects can easily be located around the map as they emit pillars of light that can be seen from afar. Interacting with the Tera Crystal will allow you to start a Tera Raid Battle.
-                    </p><br />
-                    <p>Note that the Tera Type of the shining crystals will determine what kind of Tera Pokemon you'll encounter in the raid. For example, touching a Grass Tera Type crystal lets you battle Grass-type Terastallized Pokemon.
-                    </p><br />
-                    <img src="images/pokemon-terra-raid-pokemon-type.jpg.webp" alt="in game window to start raid">
-                    <p>Approach a shining crystal and touch it to open the Tera Raid Battle menu. Players could host the raid online or solo it. This is also where player select the Pokemon for raid battle or the game will select first slot by default.
-                    </p><br />
-                    <img src="images/host-raid.jpg" alt="in game window to host raid">
-                    <p>To have a battle together with friends you already know, you’ll need to set a Link Code.. Note that an internet connection and Nintendo Online subscription is required to join Tera Raid Battles with other players online.
-                    </p><br />
-                    <img src="images/join-raid.jpg" alt="in game window to join raid with link code">
-                    <p>Alternatively, you can seek out other trainers looking for teammates using the in-game Tera Raid Battle Option.
+                    <p>
+                        This section will be updated as we learn more of the game.
                     </p><br />
                 </div>
             </div>
