--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -336,7 +336,7 @@
                 <div class="image-main-container">
                     <h3  id="recommendation">Recommended Builds</h3>
                     <p>
-                    This section is build from community knowledge. It would be updated as we learn more of the game.
+                    This section is build from community knowledge. It would be updated as we learn more of the game. These are our recommened build for Each Tera Type Raid Battle
                     </p><br />
                     <div class="raid-item">
                         <div id="filter-main-container">
