--- a/Final Project/aboutpaldea.html
+++ b/Final Project/aboutpaldea.html
@@ -24,7 +24,7 @@
     <!-- Link jQuery's CDN used for accessibility dropdown menu -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Inform user of current page within site structure: shown on web page's tab -->
-    <title>Paldea Times | Home</title>
+    <title>Paldea Times | About Paldea</title>
 </head>
 
 <!-- Body section contains the structure for all visible content
@@ -112,5 +112,15 @@
             </aside>
         </section>
     </header>
+    <main>
+        <h1 id="main-page-title-center">About Paldea</h1>
+        <div class="paldea-grid-container">
+            <div class ="paldea-item">
+                <video class ="videoInsert" controls>
+                    <source src="video/videoplayback.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
 
 </body>
